--- a/arquivos/Untitled.html
+++ b/arquivos/Untitled.html
@@ -39,6 +39,6 @@
       do jogo. Por um tempo, foi considerado a carta mais odiada pela comunidade
       por ser excessivamente utilizada em certas faixas de troféus. Apesar de a
       Supercell ter ajustado o balanço da carta, ela ainda é bastante popular.
-    <title>Estava sem sono</title>
+    <title>Teste</title>
   </body>
 </html>
