tentando um html + css

--- a/lista-tarefas/test.html
+++ b/lista-tarefas/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <marquee>Olá Turma!</marquee>
@@ -15,7 +16,10 @@
     <h6>santos</h6>
     <br>
     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos reiciendis in veniam magnam placeat consectetur. Impedit dolor nihil labore ab. Illum placeat eveniet laborum libero a tenetur odit saepe est.</p>
-    <a href="https://www.w3schools.com/" target="_blank">
- </a>
+    <ul>
+    <li><a href="https://www.w3schools.com/" target="_blank">Visite o W3Schools</a></li>
+    </ul>
+    
+
 </body>
 </html>
