--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de tarefas</title>
-</head>
-<body>
-    <div> 
-        <h1>Minhs tarfas</h1>
-        <input type="text" 
-        id="tarefas" 
-        placeholder="Digite uma tarefas..." 
-        />
+  </head>
+  <body>
+    <div>
+      <h1>Minhs tarfas</h1>
+      <input type="text" id="tarefas" placeholder="Digite uma tarefas..." />
     </div>
-
-</body>
+  </body>
 </html>
