--- a/lista-tarefas/test.html
+++ b/lista-tarefas/test.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <marquee>Olá Turma!</marquee>
-    <h1>Olá mundo</h1>
-    <h2>Daniel Luiz</h2>
-    <h3>Doris</h3>
-    <h4>Juliana</h4>
-    <h5>Palmeiras</h5>
-    <h6>santos</h6>
-    <br>
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos reiciendis in veniam magnam placeat consectetur. Impedit dolor nihil labore ab. Illum placeat eveniet laborum libero a tenetur odit saepe est.</p>
-    <ul>
-    <li><a href="https://www.w3schools.com/" target="_blank">Visite o W3Schools</a></li>
-    </ul>
-    
+    <div>
+        <div class="h">titulos</div>
+        <div class="login">logins</div>
+        <form>
+            <h1 class="h">Nome de usuario:</h1>
+            <input type="text"class="login"placeholder="Nome de usuario:">
+            <h1 class="h">Email</h1>
+            <input type="email"class="login"placeholder="seuemail@gmail.com:">
+            <h1 class="h">Senha:</h1>
+            <input type="text"class="login"placeholder="Sua melhor senha">
+        </form>
+    </div>
 
 </body>
 </html>
