--- a/lista-tarefas/test2.html
+++ b/lista-tarefas/test2.html
@@ -1,91 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test2</title>
-
-    <!-- CSS no mesmo arquivo -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de Login</title>
     <style>
-      body {
-        background-color: rgb(0, 154, 214);
-        font-family: Arial, Helvetica, sans-serif;
-      }
+        /* Reset básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-      .borda2 {
-        border: 12px solid gray;
-        max-width: 400px;
-        margin: 40px auto;
-        border-radius: 12px;
-        background-color: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #1a1a1a, #000000);
+            color: #f1f1f1;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-      .doris {
-        border: 3px solid rgb(255, 255, 255);
-        background-color: rgb(255, 255, 255);
-        padding: 20px;
-      }
+        /* Marquee estilizado */
+        .marquee {
+            width: 100%;
+            background: #222;
+            color: #ffcc00;
+            font-size: 1.1rem;
+            padding: 10px 0;
+            border-bottom: 2px solid #ffcc00;
+        }
 
-      .titulo {
-        color: rgb(255, 191, 0);
-        font-size: 22px;
-        text-align: center;
-        margin-bottom: 25px;
-      }
+        /* Container principal */
+        .container {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+            width: 90%;
+            max-width: 400px;
+            text-align: center;
+            backdrop-filter: blur(10px);
+        }
 
-      .login {
-        color: rgb(83, 83, 83);
-        font-size: 18px;
-        margin-bottom: 5px;
-      }
+        .container h2 {
+            margin-bottom: 20px;
+            color: #ffcc00;
+        }
 
-      .nomeUsuario {
-        display: block;
-        width: 100%;
-        padding: 10px;
-        background-color: transparent;
-        color: gray;
-        border: 2px solid rgb(83, 83, 83);
-        border-radius: 25px;
-        margin-bottom: 15px;
-        outline: none;
-      }
+        .container p {
+            margin-bottom: 25px;
+            color: #ccc;
+        }
 
-      .nomeUsuario:focus {
-        border-color: rgb(0, 154, 214);
-      }
+        .input-box {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
 
-      .imgDev {
-        display: block;
-        width: 150px; /* tamanho da imagem */
-        height: auto; /* mantém proporção */
-        margin: 20px auto 0; /* centraliza e adiciona espaçamento */
-      }
+        input {
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #555;
+            background: #111;
+            color: #f1f1f1;
+            font-size: 1rem;
+            transition: all 0.3s;
+        }
+
+        input:focus {
+            border-color: #ffcc00;
+            outline: none;
+            background: #1a1a1a;
+        }
+
+        button {
+            background: #ffcc00;
+            color: #000;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-top: 15px;
+            transition: all 0.3s;
+        }
+
+        button:hover {
+            background: #e6b800;
+        }
+
+        .footer-text {
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: #aaa;
+        }
+
+        .footer-text a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+
+        .footer-text a:hover {
+            text-decoration: underline;
+        }
     </style>
-  </head>
+</head>
+<body>
 
-  <body>
-    <div class="borda2">
-      <div class="doris">
-        <h1 class="titulo">Acesse sua conta</h1>
+    <marquee class="marquee">🔥 Promoções imperdíveis — Aproveite antes que acabe! 🔥</marquee>
 
-        <h4 class="login">Nome de usuário:</h4>
-        <input
-          type="text"
-          class="nomeUsuario"
-          placeholder="Digite seu email..."
-        />
+    <div class="container">
+        <h2>Bem-vindo(a)!</h2>
+        <p>Entre para descobrir as melhores promoções do momento.</p>
 
-        <h4 class="login">Senha:</h4>
-        <input
-          type="password"
-          class="nomeUsuario"
-          placeholder="Digite sua senha mais forte..."
-        />
+        <form>
+            <div class="input-box">
+                <input type="text" placeholder="Nome de usuário" required>
+                <input type="email" placeholder="Seu e-mail" required>
+                <input type="password" placeholder="Sua senha" required>
+            </div>
 
-        <img src="img/login.png" class="imgDev" alt="Imagem de login" />
-      </div>
+            <button type="submit">Entrar</button>
+        </form>
+
+        <div class="footer-text">
+            Ainda não tem conta? <a href="#">Cadastre-se</a>
+        </div>
     </div>
-  </body>
+
+</body>
 </html>
