add css (projeto novo)

--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Lista de tarefas</title>
   </head>
   <body>
     <div>
-      <h1>Minhs tarfas</h1>
-      <input type="text" id="tarefas" placeholder="Digite uma tarefas..." />
-    </div>
+      <div id="container">
+        <h1>Minhas tarefas</h1>
+        <input 
+        type="text" 
+        id="tarefa" 
+        placeholder="Digite uma tarefas..." 
+        />
+        <button>Adicionar</button>
+      </div>
   </body>
 </html>
