--- a/lista-tarefas/old/test2.html
+++ b/lista-tarefas/old/test2.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-    <marquee class="marquee">🔥 Promoções imperdíveis — Aproveite antes que acabe! 🔥</marquee>
+    <marquee class="marquee">Promoções imperdíveis — Aproveite antes que acabe!</marquee>
 
     <div class="container">
         <h2>Bem-vindo(a)!</h2>
