--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -7,7 +7,6 @@
     <title>Lista de tarefas</title>
   </head>
   <body>
-    <div>
       <div id="container">
         <h1>Minhas tarefas</h1>
         <input 
@@ -15,7 +14,7 @@
         id="tarefa" 
         placeholder="Digite uma tarefas..." 
         />
-        <button>Adicionar</button>
+        <button id="btn-add">Adicionar</button>
       </div>
   </body>
 </html>
