Ultima att do dia, terminar em casa

--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -15,7 +15,9 @@
         placeholder="Digite uma tarefas..." 
         />
         <button id="btn-add">Adicionar</button>
+        <a href="https://www.w3schools.com/html/html_links.asp" target="_blank">Como usar atributos</a>
         
+        <ul id="lista"></ul>
       </div>
   </body>
 </html>
