subindo ultimas att

--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -3,21 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Lista de tarefas</title>
   </head>
   <body>
-      <div id="container">
-        <h1>Minhas tarefas</h1>
-        <input 
-        type="text" 
-        id="tarefa" 
-        placeholder="Digite uma tarefas..." 
-        />
-        <button id="btn-add">Adicionar</button>
-        <a href="https://www.w3schools.com/html/html_links.asp" target="_blank">Como usar atributos</a>
-        
-        <ul id="lista"></ul>
-      </div>
+    <div id="container">
+      <h1>Minhas tarefas</h1>
+      <input type="text" id="tarefa" placeholder="Digite uma tarefas..." />
+      <button id="btn-add">Adicionar</button>
+
+      <ul id="lista"></ul>
+    </div>
+    <div class="tarefass">
+      <ul>
+        <li>
+          <input type="checkbox" />
+          <a
+            href="https://www.w3schools.com/html/html_attributes.asp"
+            target="_blank"
+            >Como usar atributos</a
+          >
+        </li>
+        <li>
+          <input type="checkbox" />
+          <a href="https://www.w3schools.com/html/default.asp" target="_blank"
+            >HTMl</a
+          >
+        </li>
+        <li>
+          <input type="checkbox" />
+          <a href="https://www.w3schools.com/css/default.asp" target="_blank"
+            >CSS</a
+          >
+        </li>
+        <li>
+          <input type="checkbox" />
+          <a href="https://www.w3schools.com/js/default.asp" target="_blank"
+            >JS</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
