arquivos do dia 06 q nao deu para subir

--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -14,34 +14,36 @@
 
       <ul id="lista"></ul>
     </div>
-    <div class="tarefass">
+    <div class="linksW3">
+      
       <ul>
         <li>
           <input type="checkbox" />
           <a
-            href="https://www.w3schools.com/html/html_attributes.asp"
-            target="_blank"
-            >Como usar atributos</a
+          href="https://www.w3schools.com/html/html_attributes.asp"
+          target="_blank"
+          >Como usar atributos</a
           >
         </li>
         <li>
           <input type="checkbox" />
           <a href="https://www.w3schools.com/html/default.asp" target="_blank"
-            >HTMl</a
+          >HTMl</a
           >
         </li>
         <li>
           <input type="checkbox" />
           <a href="https://www.w3schools.com/css/default.asp" target="_blank"
-            >CSS</a
+          >CSS</a
           >
         </li>
         <li>
           <input type="checkbox" />
           <a href="https://www.w3schools.com/js/default.asp" target="_blank"
-            >JS</a
+          >JS</a
           >
         </li>
+        <a href="./sobre.html">ir para a pagina sobre</a>
       </ul>
     </div>
   </body>
