--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -11,7 +11,7 @@
       <h1>Minhas tarefas</h1>
       <input type="text" id="tarefa" placeholder="Digite uma tarefas..." />
       <button id="btn-add">Adicionar</button>
-
+      
       <ul id="lista"></ul>
     </div>
     <div class="linksW3">
@@ -42,9 +42,11 @@
           <a href="https://www.w3schools.com/js/default.asp" target="_blank"
           >JS</a
           >
+          <a href="./sobre.html">ir para a pagina sobre</a>
         </li>
-        <a href="./sobre.html">ir para a pagina sobre</a>
       </ul>
     </div>
+    <script src="./js/script.js"></script>
   </body>
-</html>
+  </html>
+  
