--- a/lista-tarefas/index.html
+++ b/lista-tarefas/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <h1>Minhas tarefas</h1>
       <input type="text" id="tarefa" placeholder="Digite uma tarefas..." />
-      <button id="btn-add">Adicionar</button>
+      <button id="btn-add" onclick="adicionar()">Adicionar</button>
       
       <ul id="lista"></ul>
     </div>
