--- a/logica-programacao/index.html
+++ b/logica-programacao/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Lógica</h1>
-        <script src="./voto2.js"></script>
+        <script src="./repaluno.js"></script>
         
     </body>
     </html>
