--- a/smart-contatos/index.html
+++ b/smart-contatos/index.html
@@ -27,7 +27,7 @@
                 <input type="text" id="telefone" placeholder="Digite seu telefone">
 
                 </section>
-                <button type="submit" onclick="cadastrado(event)">Cadastrar</button> 
+                <button type="submit">Cadastrar</button> 
         </form>
         <h2 class="h2">lista de contatos</h2>
         <ul class="lista">
