subindo a parte de delete da pagina de cadastro

--- a/smart-contatos/index.html
+++ b/smart-contatos/index.html
@@ -32,9 +32,9 @@
         <h2 class="h2">lista de contatos</h2>
         <ul class="lista">
             <!--Aqui a lista vai aparecer (futuramente com JS)-->
-            <li>A lista aparece aqui...</li>
+            <liA class ="lista-msg"></liA
             
-        </ul>
+            </ul>
     </main>
     <script src="./js/script.js"></script>
 </body>
