termianr em casa a parte de endereço

--- a/smart-contatos/index.html
+++ b/smart-contatos/index.html
@@ -27,16 +27,27 @@
                 <input type="text" id="telefone" placeholder="Digite seu telefone">
 
                 </section>
+                <section class= "group">
+                <label for="Endereço">Endereço</label>
+                <input type="text" id="Endereco" placeholder="Digite seu Endereço">
+
+                </section>
                 <button type="submit">Cadastrar</button> 
         </form>
         <h2 class="h2">lista de contatos</h2>
         <ul class="lista">
             <!--Aqui a lista vai aparecer (futuramente com JS)-->
-            <liA class ="lista-msg"></liA
+            <li class ="lista-msg"></li
             
             </ul>
     </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
