subindo a correção do botao de cadastro

--- a/smart-contatos/index.html
+++ b/smart-contatos/index.html
@@ -29,7 +29,7 @@
                 </section>
                 <section class= "group">
                 <label for="Endereço">Endereço</label>
-                <input type="text" id="Endereco" placeholder="Digite seu Endereço">
+                <input type="text" id="endereco" placeholder="Digite seu Endereço">
 
                 </section>
                 <button type="submit">Cadastrar</button> 
@@ -44,10 +44,3 @@
     <script src="./js/script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
