--- a/node-aula01/public/home.html
+++ b/node-aula01/public/home.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viagem</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>
-    
+    <div class="centralizar">
+        <h1>Viagens.com</h1>
+        <hr>
+        <img src="./img/449-200x300.jpg" alt="Casas antigas">
+        <div class="textosItalia">
+
+            <li>A Itália é um país localizado na Europa Meridional.</li>
+            <li>Tem como capital a cidade de Roma, onde fica também o Estado do Vaticano.</li>
+            <li>É banhada pelo mar Mediterrâneo e composta ainda por regiões autônomas, como as da Sicília e Sardenha.</li>
+            <li>Seu clima é predominantemente mediterrâneo, enquanto o relevo varia entre montanhoso e plano.</li>
+            <li>Existem vulcões ativos no país, concentrando-se na região sul.</li>
+            <li>Possui 60,46 milhões de habitantes, 70% dos quais vivem nas cidades.</li>
+            <li>Sua capital, Roma, é a cidade mais populosa, com mais de quatro milhões de habitantes.</li>
+            <li>Sua economia se concentra no setor de serviços, com destaque para o turismo. A indústria é referência no setor automobilístico, que responde por parte significativa das exportações.</li>
+            <li>Sua produção agrícola se concentra no sul do país.</li>
+            <li>É o país com o maior número de sítios listados pela Unesco como patrimônio da humanidade.</li>
+          </ul>
+
+        </div>
+        <hr>
+        <img src="./img/483-200x300.jpg" alt="Paisagem com pedras grandes e mar">
+        <hr>
+        <ul>
+
+    </div>
 </body>
 </html>
