subindo descrção das imagens

--- a/node-aula01/public/home.html
+++ b/node-aula01/public/home.html
@@ -30,6 +30,17 @@
         </div>
         <hr>
         <img src="./img/483-200x300.jpg" alt="Paisagem com pedras grandes e mar">
+        <div class="textosPaisagem">
+            <ul>
+  <li>Costa rochosa com grandes formações de pedra escura.</li>
+  <li>Penhascos íngremes ao fundo, com textura marcada pelas erosões.</li>
+  <li>Mar agitado, com ondas fortes batendo contra as rochas.</li>
+  <li>Espuma branca formada pelo impacto das ondas.</li>
+  <li>Oceano se estendendo ao fundo, até o horizonte.</li>
+  <li>Céu claro com leve neblina, criando um clima natural e dramático.</li>
+</ul>
+
+        </div>
         <hr>
         <ul>
 
